--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  video_player: ^2.5.1
+  image_picker: ^0.8.6+1
+  permission_handler: ^10.0.0
+
 
 dev_dependencies:
   flutter_test:
